# agent-hr

./: .coverage  .gitignore  .pre-commit-config.yaml  HYPERLINK_SETUP.md  Makefile  README.md  main.py  pyproject.toml  resule_dump.sql  resume.db  resume.sql  ruff.toml  setup_google_credentials.py  yourator.xlsx
import_resume/: __init__.py  database.py  factory.py  interface.py  models.py
import_resume/drivers/: __init__.py  cake.py  csv_importer.py  lrs.py  utils.py  yourator.py
tests/: __init__.py  conftest.py  test_interface.py
tests/drivers/: __init__.py  test_cake.py  test_lrs.py  test_yourator.py
