[project]
name = "cli-app"
version = "0.1.0"
description = "Resume import system with modular architecture"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "email-validator>=2.3.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.3",
    "requests>=2.32.5",
    "sqlmodel>=0.0.27",
    "typer>=0.20.0",
]

[project.scripts]
resume-import = "main:app"

[dependency-groups]
dev = [
    "bandit[toml]>=1.8.6",
    "pre-commit>=4.3.0",
    "ruff>=0.14.3",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101", "B601"]  # Skip assert_used and shell_injection_process_args for dev tools
